fix z-index of location suggestions

--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -106,6 +106,7 @@
     border-bottom: 1px solid var(--dark-gray-faded);
     position: relative;
     padding: 0.5em 1.5em;
+    z-index: 9;
 }
 
 #locationSuggestions a {
